--- a/ban-client/src/index.css
+++ b/ban-client/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    color: white;
+}
+
+:root {
+    background-color: black;
+    margin: 0px;
+    padding: 0px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
