--- a/ban-client/src/index.css
+++ b/ban-client/src/index.css
@@ -4,11 +4,16 @@
 
 * {
     font-family: "Montserrat", sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     color: white;
 }
 
+.title {
+    font-family: "Bebas Neue", cursive;
+}
+
 :root {
+    font-size: 14px;
     background-color: black;
     margin: 0px;
     padding: 0px;
